fix review name/star spacing

--- a/python-project-starter/react-app/src/components/itemsList.css
+++ b/python-project-starter/react-app/src/components/itemsList.css
@@ -128,7 +128,7 @@ align-items: center;
 }
 
 .reviews .user-and-date {
-margin-bottom: 20px;
+margin-bottom: 4px;
 font-weight: bold;
 font-size: 12px;
 }
